[gd_scene load_steps=6 format=3 uid="uid://dl6j4p6k130jt"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_6reep"]
[ext_resource type="Texture2D" uid="uid://cpmfhsrjhgexy" path="res://Assets/star.png" id="2_yge1h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ywl78"]
atlas = ExtResource("2_yge1h")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_llag3"]
atlas = ExtResource("2_yge1h")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2j54"]
atlas = ExtResource("2_yge1h")
region = Rect2(0, 0, 200, 200)

[node name="UI" type="CanvasLayer" groups=["UI"]]
script = ExtResource("1_6reep")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 31.0

[node name="Popup" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="Popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinLoseState" type="Label" parent="Popup"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 74.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stars" type="HBoxContainer" parent="Popup"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 81.0
offset_right = 308.0
offset_bottom = 281.0
grow_horizontal = 2
scale = Vector2(0.495, 0.495)

[node name="Star1" type="TextureRect" parent="Popup/Stars"]
layout_mode = 2
texture = SubResource("AtlasTexture_ywl78")
expand_mode = 3
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="Popup/Stars"]
layout_mode = 2
texture = SubResource("AtlasTexture_llag3")
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="Popup/Stars"]
layout_mode = 2
texture = SubResource("AtlasTexture_g2j54")
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="Popup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -13.0
offset_right = 43.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Score :  420"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Popup"]
layout_mode = 0
offset_left = 14.0
offset_top = 316.0
offset_right = 126.0
offset_bottom = 380.0
text = "Restart Level"

[node name="NextLevelButton" type="Button" parent="Popup"]
layout_mode = 0
offset_left = 174.0
offset_top = 316.0
offset_right = 286.0
offset_bottom = 380.0
text = "Next Level"

[connection signal="button_down" from="Popup/RestartButton" to="." method="_on_restart_button_button_down"]
[connection signal="button_down" from="Popup/NextLevelButton" to="." method="_on_next_level_button_button_down"]
